# projectFileBrowser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/gui/: MainScreen.h  Theme.h
include/gui/core/: BasePanel.h  BaseScreen.h  MainWindow.h
include/gui/panels/: BottombarPanel.h  ContentPanel.h  SidebarPanel.h  ToolbarPanel.h
include/gui/panels/content/: ContentPanel.h
include/gui/panels/content/pane/: FileBrowser.h
include/gui/screens/main/: MainScreen.h
include/gui/screens/main/panels/: FileInfoPanel.h  FileListPanel.h  SidebarPanel.h  ToolbarPanel.h
src/: main.cpp
src/gui/: MainScreen.cpp
src/gui/core/: MainWindow.cpp
src/gui/panels/: BottombarPanel.cpp  ContentPanel.cpp  SidebarPanel.cpp  ToolbarPanel.cpp
src/gui/panels/content/: ContentPanel.cpp
src/gui/panels/content/pane/: FileBrowser.cpp
src/gui/screens/main/: MainScreen.cpp
src/gui/screens/main/panels/: FileInfoPanel.cpp  FileListPanel.cpp  SidebarPanel.cpp  ToolbarPanel.cpp
